--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>පින්තූර - ශ්‍රී සම්බුද්ධ විහාරය</title>
+    <title>පින්තූර - විද්‍යා බන්ධු මහ පිරිවෙන</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Sinhala:wght@400;600;700&display=swap"
         rel="stylesheet">
@@ -18,7 +18,7 @@
             <div class="logo">
                 <i class="fas fa-dharmachakra fa-2x"></i>
                 <div>
-                    <span>ශ්‍රී සම්බුද්ධ</span><br>
+                    <span>විද්‍යා බන්ධු මහ </span><br>
                     <span style="font-size: 0.8em; color: var(--primary-color);">පිරිවෙණ</span>
                 </div>
             </div>
@@ -75,7 +75,7 @@
     <footer>
         <div class="footer-content">
             <div class="footer-section">
-                <h3>ශ්‍රී සම්බුද්ධ පිරිවෙණ</h3>
+                <h3>විද්‍යා බන්ධු මහ පිරිවෙන</h3>
                 <p>ධර්මය, අධ්‍යාපනය සහ සංස්කෘතිය මුසු වූ පින්බිම.</p>
             </div>
             <div class="footer-section">
@@ -95,11 +95,12 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 ශ්‍රී සම්බුද්ධ විහාරය. All Rights Reserved.</p>
+            <p>&copy; 2026 විද්‍යා බන්ධු මහ පිරිවෙන. All Rights Reserved.</p>
         </div>
     </footer>
 
     <script src="script.js"></script>
 </body>
+
 
 </html>
