--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>අප ගැන - ශ්‍රී සම්බුද්ධ විහාරය</title>
+    <title>අප ගැන - විද්‍යා බන්ධු මහ පිරිවෙන</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Sinhala:wght@400;600;700&display=swap"
         rel="stylesheet">
@@ -18,7 +18,7 @@
             <div class="logo">
                 <i class="fas fa-dharmachakra fa-2x"></i>
                 <div>
-                    <span>ශ්‍රී සම්බුද්ධ</span><br>
+                    <span>විද්‍යා බන්ධු මහ </span><br>
                     <span style="font-size: 0.8em; color: var(--primary-color);">පිරිවෙණ</span>
                 </div>
             </div>
@@ -49,8 +49,8 @@
                 <div class="line"></div>
             </div>
             <p>
-                ශ්‍රී සම්බුද්ධ විහාරය වසර 50කට අධික ඉතිහාසයකට උරුමකම් කියන පුදබිමකි.
-                1970 වර්ෂයේදී ආරම්භ කරන ලද මෙම විහාරස්ථානය එවක වැඩ සිටි නායක ස්වාමීන් වහන්සේගේ අප්‍රතිහත ධෛර්යය නිසා
+               විද්‍යා බන්ධු මහ පිරිවෙන වසර 300කට අධික ඉතිහාසයකට උරුමකම් කියන පුදබිමකි.
+                1865 වර්ෂයේදී ආරම්භ කරන ලද මෙම විහාරස්ථානය එවක වැඩ සිටි නායක ස්වාමීන් වහන්සේගේ අප්‍රතිහත ධෛර්යය නිසා
                 අද වන විට ප්‍රදේශයේ විශාලතම ආගමික මධ්‍යස්ථානය බවට පත්ව ඇත.
             </p>
             <br>
@@ -76,7 +76,7 @@
                         style="width: 100%; height: 100%; object-fit: cover;">
                 </div>
                 <h3>විහාරාධිපති ස්වාමීන් වහන්සේ</h3>
-                <p>ශාස්ත්‍රපති රාජකීය පණ්ඩිත...</p>
+                <p> පූජ්‍ය මඩකුඹුරුමුල්ලේ විජිත නා හිමි...</p>
             </div>
             <div class="activity-card" style="text-align: center;">
                 <div
@@ -85,7 +85,7 @@
                         style="width: 100%; height: 100%; object-fit: cover;">
                 </div>
                 <h3>කෘත්‍යාධිකාරී ස්වාමීන් වහන්සේ</h3>
-                <p>ගෞරව ශාස්ත්‍රවේදී...</p>
+                <p>පූජ්‍ය මඩකුඹුරුමුල්ලේ විජිත නා හිමි</p>
             </div>
         </div>
     </section>
@@ -93,7 +93,7 @@
     <footer>
         <div class="footer-content">
             <div class="footer-section">
-                <h3>ශ්‍රී සම්බුද්ධ පිරිවෙණ</h3>
+                <h3>විද්‍යා බන්ධු මහ පිරිවෙන</h3>
                 <p>ධර්මය, අධ්‍යාපනය සහ සංස්කෘතිය මුසු වූ පින්බිම.</p>
             </div>
             <div class="footer-section">
@@ -113,11 +113,12 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 ශ්‍රී සම්බුද්ධ විහාරය. All Rights Reserved.</p>
+            <p>&copy; 2026 විද්‍යෘ බන්ධු මහ පිරිවෙන. All Rights Reserved.</p>
         </div>
     </footer>
 
     <script src="script.js"></script>
 </body>
+
 
 </html>
