--- a/about.html
+++ b/about.html
@@ -109,7 +109,7 @@
                 <h3>අමතන්න</h3>
                 <p><i class="fas fa-phone"></i> +94 11 234 5678</p>
                 <p><i class="fas fa-envelope"></i> info@temple.lk</p>
-                <p><i class="fas fa-map-marker-alt"></i> අංක 123, පන්සල පාර, කොළඹ.</p>
+                <p><i class="fas fa-map-marker-alt"></i> විද්‍යා බන්ධු පිරිවෙන කිරිමැටියාන ලුණුවිල.</p>
             </div>
         </div>
         <div class="footer-bottom">
@@ -122,3 +122,4 @@
 
 
 </html>
+
