--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>සම්බන්ධ වීමට - ශ්‍රී සම්බුද්ධ විහාරය</title>
+    <title>සම්බන්ධ වීමට - විද්‍යා බන්ධු මහ පිරිවෙන </title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Sinhala:wght@400;600;700&display=swap"
         rel="stylesheet">
@@ -18,7 +18,7 @@
             <div class="logo">
                 <i class="fas fa-dharmachakra fa-2x"></i>
                 <div>
-                    <span>ශ්‍රී සම්බුද්ධ</span><br>
+                    <span>විද්‍යා බන්ධු</span><br>
                     <span style="font-size: 0.8em; color: var(--primary-color);">පිරිවෙණ</span>
                 </div>
             </div>
@@ -51,16 +51,16 @@
                 <div style="margin-bottom: 1.5rem;">
                     <i class="fas fa-map-marker-alt" style="color: var(--primary-color); width: 30px;"></i>
                     <strong>ලිපිනය:</strong><br>
-                    ශ්‍රී සම්බුද්ධ විහාරය,<br>
-                    අංක 123, පන්සල පාර,<br>
-                    කොළඹ.
+                    විද්‍යා බන්ධු පිරිවෙන,<br>
+                    කිරිමැටියාන,<br>
+                    ලුණුවිල.
                 </div>
 
                 <div style="margin-bottom: 1.5rem;">
                     <i class="fas fa-phone" style="color: var(--primary-color); width: 30px;"></i>
                     <strong>දුරකථන:</strong><br>
-                    +94 11 234 5678<br>
-                    +94 77 123 4567
+                    +94 31 225 0850<br>
+                    +94 77 400 0300
                 </div>
 
                 <div style="margin-bottom: 1.5rem;">
@@ -108,7 +108,7 @@
     <section style="padding-top: 0;">
         <div
             style="width: 100%; height: 400px; background-color: #eee; display: flex; align-items: center; justify-content: center; border-radius: 10px;">
-            <p style="color: #888;">Google Map Placeholder</p>
+            <p style="color: #888;">https://maps.app.goo.gl/o8XC4ahwgS7XSf7o6</p>
             <!-- In a real site, you would embed an iframe here -->
         </div>
     </section>
@@ -116,7 +116,7 @@
     <footer>
         <div class="footer-content">
             <div class="footer-section">
-                <h3>ශ්‍රී සම්බුද්ධ පිරිවෙණ</h3>
+                <h3>විද්‍යා බන්ධු පිරිවෙන</h3>
                 <p>ධර්මය, අධ්‍යාපනය සහ සංස්කෘතිය මුසු වූ පින්බිම.</p>
             </div>
             <div class="footer-section">
@@ -132,15 +132,16 @@
                 <h3>අමතන්න</h3>
                 <p><i class="fas fa-phone"></i> +94 11 234 5678</p>
                 <p><i class="fas fa-envelope"></i> info@temple.lk</p>
-                <p><i class="fas fa-map-marker-alt"></i> අංක 123, පන්සල පාර, කොළඹ.</p>
+                <p><i class="fas fa-map-marker-alt"></i> විද්‍යා බන්ධු පිරිවෙන කිරිමැටියාන.</p>
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 ශ්‍රී සම්බුද්ධ විහාරය. All Rights Reserved.</p>
+            <p>&copy; 202විද්‍යා බන්ධු පිරිවෙන. All Rights Reserved.</p>
         </div>
     </footer>
 
     <script src="script.js"></script>
 </body>
+
 
 </html>
